# IndieStudio

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake
inc/: Bomberman.hpp  Core.hpp  Data.hpp  DiedScene.hpp  EventReceiver.hpp  GenerateMap.hpp  IDisplay.hpp  IPlayer.hpp  IScene.hpp  ISound.hpp  Ia.hpp  IrrKlang.hpp  Irrlicht.hpp  Menu.hpp  Params.hpp  Player.hpp  PlayerMove.hpp  Position.hpp  Preroll.hpp  Settings.hpp  Tools.hpp  keyCodes.hpp
src/: Bomberman.cpp  Core.cpp  DeviceReceiver.cpp  DiedScene.cpp  EventReceiver.cpp  GenerateMap.cpp  Ia.cpp  IrrKlang.cpp  Irrlicht.cpp  Menu.cpp  Params.cpp  Player.cpp  PlayerMove.cpp  Preroll.cpp  Settings.cpp  Todo_for_scene  Tools.cpp  main.cpp
texture/assassin/: akai_e_espiritu.dae  akai_e_espiritu.mtl
